--- a/DisplayMotionCreatorCore/DisplayMotionCreatorCore.csproj
+++ b/DisplayMotionCreatorCore/DisplayMotionCreatorCore.csproj
@@ -6,6 +6,17 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <AssemblyName>$(MSBuildProjectName.Replace("Core", ""))</AssemblyName>
+    <ApplicationIcon>res\dmc.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <AssemblyVersion>0.1</AssemblyVersion>
+    <FileVersion>$(AssemblyVersion)</FileVersion>
+    <Copyright>© 2024 Ulyssa</Copyright>
+    <Version>$(AssemblyVersion)</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="res\dmc.ico" />
+  </ItemGroup>
 
 </Project>
