ポート完了

--- a/DisplayMotionCreatorCore/App.config
+++ b/DisplayMotionCreatorCore/App.config
@@ -1,3 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DisplayMotionCreatorCore.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <userSettings>
+        <DisplayMotionCreatorCore.Properties.Settings>
+            <setting name="tempoSave" serializeAs="String">
+                <value>テンポを入力</value>
+            </setting>
+            <setting name="timSigSave" serializeAs="String">
+                <value>拍子を入力</value>
+            </setting>
+            <setting name="lengthSave" serializeAs="String">
+                <value>長さを入力</value>
+            </setting>
+            <setting name="startFrameSave" serializeAs="String">
+                <value>開始フレーム位置を入力</value>
+            </setting>
+            <setting name="startBarSave" serializeAs="String">
+                <value>開始小節番号を入力(1以上)</value>
+            </setting>
+        </DisplayMotionCreatorCore.Properties.Settings>
+    </userSettings>
 </configuration>
