--- a/DisplayMotionCreatorCore/DisplayMotionCreatorCore.csproj
+++ b/DisplayMotionCreatorCore/DisplayMotionCreatorCore.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="WPF-UI" Version="3.0.0" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
